fixed z-indexes

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -12,7 +12,7 @@ body{
 h1{
     float: left;
     clear: both;
-    margin: 1em 1em 0 1em;
+    margin: 0em 1em 0 1em;
     font-size: 6vw;
     color: #e59560;
 }
@@ -58,15 +58,13 @@ a:visited {
 }
 #flashlight{
     position: absolute;
-    z-index: 0;
+    z-index: -1;
     width: 400px;
     height: 400px;
     background: radial-gradient(circle, rgba(243, 232, 71, 0.5) 0%,  rgba(255,255,255,0) 70%);
     border-radius: 50%;
 }
 #hidden{
-    position:absolute;
-    z-index: 1;
     margin-top: 1em;
     color: #1d3124;
 }
